Fix .align-middle

--- a/yinyang.styl
+++ b/yinyang.styl
@@ -13,7 +13,7 @@ majorWidth = 0.15
 .text-right
   text-align: right
 .align-middle
-  vertical-align: middl
+  vertical-align: middle
 
 svg
   width: 100%
